--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
   },
   "dependencies": {
     "@google/genai": "^1.40.0",
-    "@mozilla/readability": "^0.6.0",
-    "jsdom": "^28.0.0",
+    "cheerio": "^1.2.0",
     "lucide-react": "^0.563.0",
     "next": "16.1.6",
     "react": "19.2.3",
